[project]
name = "hcaptcha-solver"
version = "0.1.0"
description = "Project to solve hCaptcha challenges using machine learning and computer vision techniques"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
